# truflation-eps-markets

./: .env.example  .gitignore  README.md  pyproject.toml
results/: cross_source_baseline_unified.csv  validate_extractors_baseline.csv
scripts/: cross_source_check.py  parse_8k_eps.py  probe_fmp.py  validate_extractors.py
src/truflation_eps/: calendar.py  edgar_8k_client.py  edgar_common.py  edgar_xbrl_client.py  fmp_client.py  market_spec.py  settlement_rules.py  yahoo_client.py
