[project]
name = "truflation-eps-markets"
version = "0.1.0"
description = "Prototype + spec for range-based EPS prediction markets on TN"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "yfinance>=0.2",
    "lxml>=5.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/truflation_eps"]
